--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site
-title:          JBlog
-bio:            'Just a simple Jekyll theme'
-description:    "JBlog is a minimal, one column and blue jekyll theme for your blog."
-picture:        'assets/img/profile.png'
+title:          Joannah Nanjekye
+bio:            'Software Developer, Aeronautical Engineering student, FOSS Contributor'
+description:    "Straight Outta 256 , I choose Results over Reasons, Passionate Aviator, Show me the code."
+picture:        'assets/img/profile.jpeg'
 locale:         en_US
-url:            https://alperenbozkurt.github.io/JBlog
+url:            https://nanjekyejoannah.github.io
 
 
 # Jekyll
@@ -24,8 +24,8 @@ sass:
 # Social
 # if you don't have any of social below, comment the line.
 #email:
-twitter: username
-facebook: username
+twitter: Captain_Joannah
+facebook: njoannah
 #google:
   #plus: #username
   #analytics:
@@ -33,18 +33,18 @@ facebook: username
   #ad-client:
   #ad-slot:
 #bing-verify:
-github: username
-stackoverflow: #123456/username   from a "http://stackoverflow.com/users/123456/username" link
-linkedin: username
+github: nanjekyejoannah
+stackoverflow: joannah-nanjekye #123456/username   from a "http://stackoverflow.com/users/123456/username" link
+linkedin: nanjekye-joannah
 #xing: username
-instagram: username
-lastfm: username
-tumblr: username
+#instagram: username
+#lastfm: username
+#tumblr: username
 #pinterest: username
 #foursquare: username
-steam: username
+#steam: username
 #dribbble: username
-youtube: username
+#youtube: username
 #soundcloud: username
 #weibo: username
 #flickr: username
@@ -57,7 +57,7 @@ youtube: username
 
 
 # Comments
-disqus_shortname: alperenbozkurt-net
+disqus_shortname: joannahnanjekye
 
 
 # Gems
